[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/dagger.png" type="Texture" id=1]
[ext_resource path="res://PlayerDagger.gd" type="Script" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 4 )

[node name="Node2D" type="Area2D"]
position = Vector2( 75, 156 )
collision_layer = 8
collision_mask = 14
script = ExtResource( 2 )

[node name="Dagger" type="Sprite" parent="."]
position = Vector2( 0, -20 )
rotation = 0.785398
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 1, 0.6 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
position = Vector2( -3, 11 )
collision_layer = 16
collision_mask = 128

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 3, -31 )
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Node2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hitbox"]
